force-app/main/default/objects/custom_create84__c/custom_create84__c.object-meta.xml
<CustomObject>
    <label>Custom created object84</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects84</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>