force-app/main/default/objects/custom_create84__c/fields/custom_create_84field528__c.field-meta.xml
<CustomField>
    <fullName>custom_create_84field528__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 84field528</label>
    <type>Checkbox</type>
</CustomField>